# Simple_Syslog_Server

./: README.md  Simple_Syslog_Server.service  Syslog_Server.service  main.py  pyproject.toml  requirements.txt  syslog_server.service
static/: scripts.js  styles.css
syslog_server/: main.py
syslog_server/templates/: index.html
templates/: index.html
