[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "syslog_server"
version = "1.0"
description = "Simple syslog server with web interface."
dependencies = ["Flask==3.0.3", "flask-socketio==5.3.6"]

[project.scripts]
syslog_server = "syslog_server.main:run_server"